cmake_minimum_required(VERSION 3.10)
project( 22127155 VERSION 0.1.0 )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include(CTest)
enable_testing()
find_package( OpenCV 4.5.2 REQUIRED )
find_package(OpenCV REQUIRED COMPONENTS core imgproc features2d)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/header)
file(GLOB SOURCES "cpp/*.cpp")
add_executable(22127155 ${SOURCES})
target_link_libraries(22127155 ${OpenCV_LIBS})
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)